--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,11 +4,7 @@
     background: #ddfaef;
 }
 
-.controlscontainer {
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-}
+
 
 .main-container {
     display: block;
@@ -26,20 +22,46 @@
     color: lightsalmon;
 }
 
-.gamemonitordiv {
-    width: 30%;
-}
 
 .controlsdiv {
     display: flex;
-    flex: auto;
+    width: 50%;
     justify-content: center;
-    width: 200px;
     border: 1px solid rgb(77, 90, 206);
     padding: 10px 10px;
     gap: 2px;
     border-radius: 5px;
     background-color: rgb(30, 200, 200);
+}
+
+.controlscontainer {
+    display: flex;
+    padding: 0 0 20px 0;
+    gap: 30px;
+}
+
+.playeronescreen, .playertwoscreen {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-size: 2.0em;
+    width: 25%;
+    font-weight: bolder;
+    background-color: rgb(166, 207, 207);
+    border-radius: 5px;
+}
+
+.playeroneind,.playertwoind{
+    display: flex;
+    gap: 30px;
+    width: 100%;
+    justify-content: center;
+
+}
+
+.playeronename, .playertwoname {
+    display: flex;
+    justify-content: center;
 }
 
 button {
