--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -105,5 +105,22 @@ button {
 .gameboard>div {
     display: flex;
     justify-content: center;
+    align-items: center;
+    font-weight: bolder;
+    font-size: 5em;
+    color: rgb(198, 184, 159);
     border: 0px solid white;
+}
+
+.gamestatus {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    padding: 0 0 10px 0;
+}
+
+.gamestatus>button {
+    background-color: blue;
+    font-weight: bolder;
+    color: white;
 }
