--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -124,3 +124,12 @@ button {
     font-weight: bolder;
     color: white;
 }
+
+.displaystatus {
+    display: flex;
+    align-items: center;
+    padding: 0 20px 0 0;
+    font-weight: bolder;
+    font-size: 3em;
+}
+
