--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -78,11 +78,18 @@ button {
     color: rgb(122, 71, 8); 
 }
 
-.reset {
-    background-color: red;
+.exit {
+    background-color: rgb(191, 59, 59);
     font-weight: bolder;
     font-size: medium;
-    color: rgb(40, 26, 9); 
+    color: rgb(248, 244, 238); 
+}
+
+.reset {
+    background-color: aquamarine;
+    font-weight: bolder;
+    font-size: medium;
+    color: rgb(122, 71, 8); 
 }
 
 .gameboardcontainer {
@@ -171,8 +178,17 @@ button {
 }
 
 .replay {
-    display: none;
     background-color: rgb(122, 71, 8);
     font-weight: bolder;
     color: white;
+}
+
+.gameovercont {
+    text-align: center;
+}
+
+.gameovermain {
+    display: none;
+    flex-direction: column;
+    align-items: center;
 }
